# voxrs

./: Cargo.toml
src/: blank.vert  bsdf.glsl  chunk.rs  chunk_thread.rs  client.rs  client_aux.rs  common.rs  config.rs  frag.glsl  gbuff.frag  gbuff.vert  grid.rs  input.rs  main.rs  material.rs  mesh.rs  octree.glsl  octree.rs  physics.rs  server.rs  shade.frag  shade.glsl  shadow_map.frag  sky.glsl  terrain.rs  vert.glsl  world.rs
src/octree/: octree.glsl  octree.rs
