[package]
name = "voxrs"
version = "0.1.0"
authors = ["Lorxu <sam@dirkback.com>"]
edition = "2018"

[dependencies]
glium = "0.24.0"
stopwatch = "*"
rayon = "*"
glsl-include = "*"
noise = "*"
rand = "*"
enum-iterator = "*"
num-traits = "*"
num-derive = "*"
itertools = "*"
nalgebra = "*"
nphysics3d = "*"
ncollide3d = "*"
