[package]
name = "voxrs"
version = "0.1.0"
authors = ["Lorxu <sam@dirkback.com>"]
edition = "2018"

[dependencies]
glium = "0.24.0"
stopwatch = "*"
rayon = "*"
glsl-include = "*"
noise = "*"
rand = "*"
enum-iterator = "*"
num-traits = "*"
num-derive = "*"
itertools = "*"
nalgebra = "*"
nphysics3d = "*"
ncollide3d = "*"
ron = "*"
serde = { version = "*", features = ["derive", "rc"] }
app_dirs2 = "2.0"
bincode = "*"
